# opentrustregion

./: .codecov.yml  .gitignore  CMakeLists.txt  README.md  pyorbopt.py  pyproject.toml  setup.py
.github/workflows/: main.yml
cmake/: OpenTrustRegionConfig.cmake.in
extensions/arh/include/: opentrustregion_arh.h
extensions/arh/src/: arh.f90  arh_c_interface.f90
extensions/arh/tests/: arh_c_interface_mock.f90  arh_c_interface_unit_tests.f90  arh_mock.f90  arh_test_reference.f90
extensions/common/src/: common.f90  common_c_interface.f90
extensions/common/tests/: common_c_interface_mock.f90  common_mock.f90  common_test_reference.f90
extensions/quasi_newton/include/: opentrustregion_quasi_newton.h
extensions/quasi_newton/src/: quasi_newton.f90  quasi_newton_c_interface.f90
extensions/quasi_newton/tests/: quasi_newton_c_interface_mock.f90  quasi_newton_c_interface_unit_tests.f90  quasi_newton_mock.f90  quasi_newton_test_reference.f90
extensions/s_gek/include/: opentrustregion_s_gek.h
extensions/s_gek/src/: s_gek.f90  s_gek_c_interface.f90
extensions/s_gek/tests/: s_gek_c_interface_mock.f90  s_gek_c_interface_unit_tests.f90  s_gek_mock.f90  s_gek_test_reference.f90
include/: opentrustregion.h
pyopentrustregion/: __init__.py  python_interface.py  tests.py  testsuite.py
pyopentrustregion/extensions/: __init__.py
pyopentrustregion/extensions/arh/: __init__.py  python_interface.py  tests.py
pyopentrustregion/extensions/common/: __init__.py  python_interface.py
pyopentrustregion/extensions/quasi_newton/: __init__.py  python_interface.py  tests.py
pyopentrustregion/extensions/s_gek/: __init__.py  python_interface.py  tests.py
pyorbopt/: pyorbopt.py
pyorbopt/examples/hf/: rhf.py  rohf.py  uhf.py
pyorbopt/examples/loc/: fb.py  pm.py
pyorbopt/test/: conftest.py  test_pyorbopt.py
src/: c_interface.f90  opentrustregion.f90
tests/: c_interface_mock.f90  c_interface_unit_tests.f90  opentrustregion_mock.f90  opentrustregion_system_tests.f90  opentrustregion_unit_tests.f90  test_reference.f90
trustorbopt/: CMakeLists.txt  README.md  pyproject.toml  setup.py
trustorbopt/pytrustorbopt/: __init__.py  python_interface.py  testsuite.py
trustorbopt/src/: c_interface.f90  trustorbopt.f90
trustorbopt/tests/: c_interface_mock.f90  c_interface_unit_tests.f90  python_interface_unit_tests.py  testsuite.f90  trustorbopt_mock.f90  trustorbopt_system_tests.f90  trustorbopt_unit_tests.f90
