[build-system]
requires = ["setuptools>=60.0.0", "wheel", "cmake"]
build-backend = "setuptools.build_meta"

[project]
name = "pyopentrustregion"
version = "0.1.0"
description = "Python interface to OpenTrustRegion Fortran library"
authors = [{ name = "Jonas Greiner", email = "jongr@kemi.dtu.dk" }]
dependencies = ["numpy"]

[tool.setuptools.package-data]
"pyopentrustregion" = ["test_data/*"]

[tool.setuptools.packages.find]
exclude = ["test_data"]
